2007-01-08  Christian Persch  <chpe@svn.gnome.org>

	* doc/reference/libgnomeui-sections.txt:
	* libgnomeui/gnome-password-dialog.c: (update_entries_table),
	(domain_entry_activate), (password_entry_activate),
	(new_password_entry_activate), (new_password_entries_changed),
	(gnome_password_dialog_init), (gnome_password_dialog_finalize),
	(gnome_password_dialog_set_property),
	(gnome_password_dialog_get_property),
	(gnome_password_dialog_class_init),
	(gnome_password_dialog_set_new_password),
	(gnome_password_dialog_set_password_quality_func),
	(gnome_password_dialog_set_show_new_password),
	(gnome_password_dialog_set_show_new_password_quality),
	(gnome_password_dialog_get_new_password):
	* libgnomeui/gnome-password-dialog.h:
	* test-gnome/test-password-dialog.c: (quality_func),
	(authenticate_boink_callback), (exit_callback), (main):
	Implement new-password including password quality measuring for
	GnomePasswordDialog. Bug #326851.

2007-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* file-chooser/gtkfilesystemgnomevfs.c: (fs_module_init):
	* libgnomeui/gnome-dialog.c: (gnome_dialog_get_type):
	* libgnomeui/gnome-druid.c: (gnome_druid_accessible_get_type),
	(gnome_druid_accessible_factory_get_type):
	* libgnomeui/gnome-entry.c: (gnome_entry_get_type):
	* libgnomeui/gnome-file-entry.c: (gnome_file_entry_get_type):
	* libgnomeui/gnome-ui-init.c: (libgnomeui_set_property):
	Don't make all the GTypeInfo stuff static. Reduces
	relocations. Patch from Christian Persch. Closes
	bug #360628.

2006-12-22  Fernando Herrera  <fherrera@onirica.com>

	* libgnomeui/gnome_segv.c: (main): Add --disable-factory to
	gnome-terminal for running gdb when GNOME_HACKER=1. It uses a
	new terminal and prevents the crashed process to exit.

2006-12-20  Paolo Borelli  <pborelli@katamail.com>

	* configure.in: check for libxml to fix the build. bug #387961.

2006-12-05  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release bump to 2.17.1.
