@@ -189,13 +189,13 @@ gnometypebuiltins.c: @REBUILD@ $(gnome_headers) gnometypebuiltins.h
 			--fhead "#include \"libgnomeui.h\"\n\n" \
 			--fhead "#include \"gnometypebuiltins.h\"\n\n" \
 			--fprod "\n/* enumerations from \"@filename@\" */" \
-			--vhead "static const G@Type@Value _@enum_name@_values[] = {" \
-			--vprod "  { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
-			--vtail "  { 0, NULL, NULL }\n};\n\n" \
-			--vtail "GType\n@enum_name@_get_type (void)\n{\n" \
-			--vtail "  static GType type = 0;\n\n" \
-			--vtail "  if (!type)\n" \
-			--vtail "    type = g_@type@_register_static (\"@EnumName@\", _@enum_name@_values);\n\n" \
+			--vhead "GType\n@enum_name@_get_type (void)\n{\n" \
+			--vhead "  static GType type = 0;\n\n" \
+			--vhead "  if (G_UNLIKELY (type == 0))\n  {\n" \
+			--vhead "    static const G@Type@Value _@enum_name@_values[] = {" \
+			--vprod "      { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
+			--vtail "      { 0, NULL, NULL }\n    };\n\n" \
+			--vtail "    type = g_@type@_register_static (\"@EnumName@\", _@enum_name@_values);\n  }\n\n" \
 			--vtail "  return type;\n}\n\n" \
 		$(gnome_headers) ) > xgen-gtc \
 	&& cp xgen-gtc $(@F) \
