@@ -51,9 +51,9 @@ gnome_icon_theme_get_type (void)
 {
   static GType type = 0;
 
-  if (type == 0)
+  if (G_UNLIKELY (type == 0))
     {
-      static const GTypeInfo info =
+      const GTypeInfo info =
 	{
 	  sizeof (GnomeIconThemeClass),
 	  NULL,           /* base_init */
